# openapi/api.yml
@@ -3,14 +3,7 @@ info:
   title: Sophtron-Search
   version: 1.0.0
 openapi: 3.0.0
-host: searh.sophtron.com
-basePath: /
-produces:
-  - application/json
-schemes:
-  - https
 components:
-
   schemas:
     Institution:
       title: Institution Object
@@ -62,11 +55,14 @@ paths:
           in: query
           description: the text search term
           required: false
-          type: string
+          schema:
+            type: string
         - name: partner
           in: query
           description: A partner name string for loading the search preference
           required: false
+          schema:
+            type: string
       description: |2-
         Get a list of institutions that matches the search term query
       responses:
@@ -90,24 +86,32 @@ paths:
         default:
           description: empty result
 
-  /api/institution/resolve/:to_provider:
+  /api/institution/resolve/{to_provider}:
     get:
       parameters:
+        - name: to_provider
+          in: path
+          description: optional - resolve to specific provider if specified, use `auto` to use analytics data and weight, otherwise provider will be loaded from preference
+          required: true
+          schema:
+            type: string
         - name: id
           in: query
           description: the id of the institution returned from initial search
           required: true
-          type: string
-          format: uuid
-        - name: to_provider
-          in: path
-          description: resolve to specific provider if specified, otherwise provider will be loaded from preference
-          required: false
-          type: string
+          schema:
+            type: string
         - name: partner
           in: query
-          description: A partner name string for loading the search preference, if to_provider is specified, this argument won't make any effect
+          description: A partner name string for loading the search preference, if `to_provider` is specified, this argument won't make any effect
           required: false
+          schema:
+            type: string
+        - name: cache
+          in: query
+          description: loading analytics data is a heavy operation and by default cached, pass value `false` to force renew the cache.
+          schema:
+            type: string
       description: |2-
         resolve an search result to specific provider's id
       responses:
@@ -118,10 +122,10 @@ paths:
               schema:
                 type: object
                 properties:
-                target_id:
-                  type: string
-                provider:
-                  type: string
+                  target_id:
+                    type: string
+                  provider:
+                    type: string
               example:
                 target_id: 4b2eca34-a729-438f-844c-ba8ce51047f9
                 provider: sophtron
@@ -134,6 +138,8 @@ paths:
           in: query
           description: A partner name string for loading the search preference
           required: false
+          schema:
+            type: string
       description: |2-
         Get a specific preference content
       responses:
@@ -149,12 +155,18 @@ paths:
       parameters:
         - name: partner
           in: query
-          description: A partner name string for storing the search preference
+          description: >-
+            A partner name string for storing the search preference
           required: false
+          schema:
+            type: string
       description: |2-
         Put the preference json content as the request body and store it referenced by `partner`
+        
+          example:
+          
+            curl -X PUT https://search.sophtron-prod.com/api/preference?partner=sophtron -d @data/preferences/sophtron.json -H 'Content-Type: application/json'
       responses:
-        "200":
-definitions: {}
-responses: {}
-parameters: {}
+        "200": 
+          description: Ok
+        
